code-fusheng 项目构建 --- 增加了AOP切面相关的注释

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <!-- AOP -->
+        <!-- AOP 通过切面获取日志信息 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
@@ -102,16 +102,19 @@
             <artifactId>logback-classic</artifactId>
             <version>1.1.11</version>
         </dependency>
+        <!-- log 拓展依赖 -->
         <dependency>
             <groupId>org.logback-extensions</groupId>
             <artifactId>logback-ext-spring</artifactId>
             <version>0.1.1</version>
         </dependency>
+        <!-- log 桥接依赖 -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
             <version>1.7.25</version>
         </dependency>
+        <!-- log 接口 -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
