--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,13 @@
             <artifactId>activation</artifactId>
             <version>1.1.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.9</version>
+        </dependency>
+
     </dependencies>
 
     <build>
