--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,12 @@ spring:
 #      url: jdbc:mysql://cdb-csnz8qhs.cd.tencentcdb.com:10087/clms_test?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
 #      username: root
 #      password: code-fusheng
-      url: jdbc:mysql://175.24.45.179/clms_test?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
+#      url: jdbc:mysql://175.24.45.179/clms_test?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
+#      username: root
+#      password: sa123
+      url: jdbc:mysql://127.0.0.1:3306/report?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
       username: root
-      password: sa123
+      password: 123456
       driver-class-name: com.mysql.cj.jdbc.Driver
       initialSize: 5
       minIdle: 5
