peng44 功能添加 ----- 添加了短信登录的功能

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,12 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.22</version>
         </dependency>
+        <!--阿里短信服务依赖-->
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-core</artifactId>
+            <version>4.5.0</version>
+        </dependency>
         <!--commons -->
         <dependency>
             <groupId>org.apache.commons</groupId>
