--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,15 +46,17 @@ spring:
       max-request-size: 100MB
   #以下为redis的配置
   redis:
-    host: 175.24.45.179
-    port: 6390
-    password: 123456
-    jedis:
+    database: 0  # Redis 数据库索引（默认为 0）
+    host: 175.24.45.179 # Redis 服务器地址
+    port: 6390 # Redis 服务器连接端口
+    password: 123456  # Redis 服务器连接密码（默认为空）
+    lettuce:
       pool:
-        max-active: 20
-        max-idle: 8
-        min-idle: 0
-        max-wait: 200
+        max-active: 50 # 连接池最大连接数（使用负值表示没有限制）
+        max-wait: -1s  # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-idle: 20  # 连接池中的最大空闲连接
+        min-idle: 10  # 连接池中的最小空闲连接
+      shutdown-timeout: 5s
   cache:
     type: redis
 
