--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8080
 spring:
   datasource:
-      url: jdbc:mysql://cdb-csnz8qhs.cd.tencentcdb.com:10087/clms?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
+      url: jdbc:mysql://cdb-csnz8qhs.cd.tencentcdb.com:10087/clms?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
       username: root
       password: code-fusheng
 #      url: jdbc:mysql://175.24.45.179/clms_test?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
@@ -69,7 +69,7 @@ github:
     secret: c4661c64b6e9a79a887ca694d88b45de9ccdba70
   redirect:
     uri: http://localhost:8080/callback
-###################以下为fastdfs的配置###########################
+###################以下为FastDfs的配置###########################
 fdfs:
   so-timeout: 2500
   connect-timeout: 600
