DeepBluet 完善了角色模块内容

--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.ibm.icu</groupId>
+            <artifactId>icu4j</artifactId>
+            <version>58.1</version>
+        </dependency>
 
     </dependencies>
 
